updated fintech project link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mateus Soares | Portfolio</title>
+    <meta name="description" content="Mateus Soares - Web Developer - React, TypeSript, Tailwind, MongoDB, Node, Express">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
